<resources>
    <string name="app_name">Art City Tour App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_review">ReviewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="sites">Sitios</string>
    <string name="close">Cercanía</string>
    <string name="planning">Planear</string>
    <string name="review">Reseña</string>
    <string name="facebook_app_id">497765492324515</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">0cc7c4ed38e7a55ea387e6fd88d1c08a</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loading">Cargando…</string>
    <string name="descriptionList_routeList">Lista de sitios</string>
    <string name="cercania_sitesList">Cercania</string>
    <string name="resenas_sitesList">Reseñas</string>
    <string name="planear_sitesList">Planear</string>
    <string name="sitios_sitesList">Sitios</string>
    <string name="atras">Atras</string>
    <string name="notification_SiteDes">Notificar de noticas del sitio</string>
    <string name="share_SiteDes">Compartir pagina del sitio</string>
    <string name="fav_SiteDes">Marcar sitio como favorito</string>
    <string name="routeName_SiteInfo">Ruta del sitio</string>
    <string name="siteName_SiteInfo">Nombre del sitio</string>
    <string name="timeExp_SiteInfo">Tiempo Esperado</string>
    <string name="description_SiteInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="capacity_SiteInfo">Capacidad maxima</string>
    <string name="addPlan_SiteInfo">Agregar Al Plan</string>
    <string name="schedule_SiteInfo">Horarios</string>
    <string name="day_SiteInfo">Dia</string>
    <string name="timeRange_SiteInfo">00:00am - 00:00pm</string>
    <string name="directions_SiteDes">¿Cómo llegar?</string>
    <string name="directionsGoogle_SitesInfo">Abrir en Google Maps</string>
    <string name="reviews_SiteDes">Reseñas</string>
    <string name="addReview_SiteDes">AGREGA TU RESEÑA</string>
    <string name="addPhoto_SiteDes">SUBIR FOTOGRAFIA</string>
    <string name="starDescription">¿Qué tal estuvo su experiencia?</string>
    <string name="opinionText">Déjanos tu opinión</string>
    <string name="una_estrella">una estrella</string>
    <string name="cinco_estrellas">cinco estrellas</string>
    <string name="cuatro_estrellas">cuatro estrellas</string>
    <string name="tres_estrellas">tres estrellas</string>
    <string name="dos_estrellas">dos estrellas</string>
    <string name="opinionTextLong">Escribe lo que opinas del lugar</string>
    <string name="limpiar">Limpiar</string>
    <string name="continuar">Continuar</string>
    <string name="addPhotosToReview">¿Desea agregar fotos a la reseña?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="addPhotos">Compártenos tus fotos</string>
    <string name="send">Subir</string>
    <string name="cancelPhotoReview">Subir reseña sin fotos</string>
    <string name="uploadPhoto">Subir fotografia</string>
    <string name="photoDescriptionLabel">Escribe una descrición de la foto/s</string>
    <string name="photoDescription">Describe la foto/s que tomaste!</string>
    <string name="app_info">App info</string>
    <string name="visited">Tus Visitados</string>
    <string name="my_route">Mi ruta</string>
    <string name="fav">Favoritos</string>
    <string name="recommended">Recomendados</string>
    <string name="your_fav">Tus Favoritos</string>
    <string name="review_opinion">¡Tu opinión nos importa!</string>
    <string name="prev_reviews">Reseñas anteriores</string>
    <string name="site_name">Nombre del sitio</string>
    <string name="dir2_text1"><u>Abrir en Google Maps</u></string>
    <string name="dir2_text2"><u>Abrir en Waze</u></string>
    <string name="plan_title">Por amor a Chepe</string>
    <string name="order_list">Ordenar \n lista</string>
    <string name="propia">Propia</string>
    <string name="compartida">Compartida</string>
    <string name="add_comentary">Agregar comentario al plan…</string>
    <string name="add_comentary_dialog">Agregar comentario</string>
    <string name="add_schedule_dialog">Agregar horario de visita</string>
    <string name="no_comentary">No hay comentario del sitio</string>
    <string name="add_schedule">Agregar hora de visita</string>
    <string name="add">Agregar</string>
    <string name="no_schedule">No hay hora de visita</string>
    <string name="no_shared_route">Pide a tu amigo que te comparta su plan y clickea su link!</string>
    <string name="add_sites">Agregá sitios</string>
    <string name="description_explore">Personalizá tu ruta del Art City Tour</string>
    <string name="explore">Explorar</string>
    <string name="ex_comment">Ej. comentario</string>
    <string name="select_date">Seleccione la fecha</string>
    <string name="select_hour">Seleccione la hora</string>
    <string name="login">Login</string>
    <string name="info_app">Obtener informacion del art city tour</string>
    <string name="create_account">Crear cuenta</string>
    <string name="forgot_pass">Olvide contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="retroceder">Retroceder</string>
    <string name="confirm_pass">Confirmar contraseña</string>
    <string name="pass">Contraseña</string>
    <string name="email">Correo</string>
    <string name="recuperate_pass">Recuperar Contraseña</string>
    <string name="send_recu_email">Enviar correo de recuperacion</string>
    <string name="confirm_pass_change">Confirmar Cambio</string>
    <string name="profile">Perfil</string>
    <string name="change_username">Cambiar nombre de usuario</string>
    <string name="name">Nombre</string>
    <string name="save">Guardar</string>
    <string name="save_name">Guardar nombre</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="save_password">Guardar contraseña</string>
    <string name="close_session">Cerrar sesion</string>
</resources>