<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sitesFragment"
        android:title="@string/sites"
        android:icon="@drawable/ic_sites_24" />
    <item
        android:id="@+id/closeFragment"
        android:title="@string/close"
        android:icon="@drawable/ic_close_sites_24"/>
    <item
        android:id="@+id/planningFragment"
        android:title="@string/planning"
        android:icon="@drawable/ic_planning_24"/>
    <item
        android:id="@+id/reviewFragment"
        android:title="@string/review"
        android:icon="@drawable/ic_review_sites_24"/>
    <item
        android:id="@+id/userProfileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_user_profile_24"/>
</menu>