<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="1">

    <Button
        android:id="@+id/addPhotoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#80005D"
        android:contentDescription="@string/continuar"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/yes"
        android:textColor="#FFFFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPhotoTextView"
        app:layout_constraintVertical_bias="0.030" />

    <Button
        android:id="@+id/noPhotoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#80005D"
        android:contentDescription="@string/continuar"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/no"
        android:textColor="#FFFFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPhotoTextView"
        app:layout_constraintVertical_bias="0.030" />

    <TextView
        android:id="@+id/lblNameSite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/row_border"
        android:fontFamily="@font/roboto_regular"
        android:paddingBottom="20dp"
        android:text="@string/routeName_routeList"
        android:textColor="#323F4B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/addPhotoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/addPhotosToReview"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNameSite"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>